# pictures-manager

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  exiftool  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  modules.md
tests/: test_foo.py
